@startuml

title __AUTHENTICATION's Class Diagram__\n

  package  {
    package authentication {
      class LoginServlet {
          {static} - serialVersionUID : long
          + LoginServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package authentication {
      class SimpleServlet {
          {static} - serialVersionUID : long
          + SimpleServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  package  {
    package authentication {
      class XMLServlet {
          {static} - serialVersionUID : long
          + XMLServlet()
          # doGet()
          # doPost()
      }
    }
  }
  

  LoginServlet -up-|> HttpServlet
  SimpleServlet -up-|> HttpServlet
  XMLServlet -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
